# re-formant

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakeRC.cmake
src/: .clang-format
src/app/: CMakeLists.txt  main.cpp  memusage.cpp  memusage.h  reformant.manifest  state.h
src/app/audio/: audiodevices.cpp  audiodevices.h  audioinput.cpp  audioinput.h  audiooutput.cpp  audiooutput.h  setup_audio.cpp  setup_audio.h
src/app/audiofiles/: audiofiles.h  audioformats.cpp  audioread.cpp  audiowrite.cpp  fileformats.cpp
src/app/processing/: audiotrack.cpp  audiotrack.h  consumerthread.cpp  consumerthread.h  denoiser.cpp  denoiser.h  pitchcontroller.cpp  pitchcontroller.h  processingthread.cpp  resampler.cpp  resampler.h  spectrogramcontroller.cpp  vector2d.h
src/app/processing/controller/: formantcontroller.cpp  formantcontroller.h  formants.cpp  formants.h  pitchcontroller.cpp  pitchcontroller.h  spectrogramcontroller.cpp  spectrogramcontroller.h  waveformcontroller.cpp  waveformcontroller.h
src/app/processing/routines/: autoc.cpp  cwindow.cpp  dchlsky.cpp  dcovlpc.cpp  dcwmtrx.cpp  dlpcwtd.cpp  dlwrtrn.cpp  dpform.cpp  dreflpc.cpp  durbin.cpp  formant.cpp  hnwindow.cpp  hwindow.cpp  lbpoly.cpp  lpc.cpp  lpc_poles.cpp  lpcbsa.cpp  qquad.cpp  routines.h  rwindow.cpp  w_covar.cpp  w_window.cpp
src/app/processing/routines/eckf/: ECKF.cpp  ECKF.h  harmonic_change_detector.cpp  is_silent.cpp
src/app/processing/thread/: consumerthread.cpp  consumerthread.h  processingthread.cpp  processingthread.h  visualisationthread.cpp  visualisationthread.h
src/app/processing/util/: findpeaks.cpp  util.h
src/app/settings/: settings.cpp  settings.h  settings_ini.cpp  settings_ini.h  settings_none.h
src/app/ui/: font_faRegular.h  font_faSolid.h  font_interMedium.h  ok_color.h  render.cpp  setup_glfw.cpp  setup_imgui.cpp  style.cpp  ui.h  ui_audiosettings.cpp  ui_displaysettings.cpp  ui_dockspace.cpp  ui_private.h  ui_profiler.cpp  ui_spectrogram.cpp
src/app/ui/fonts/: README.md
